--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,42 @@
+# Node modules folder
 node_modules/
+
+# Environment variables file
 .env
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Debugger files
+.vscode/
+.idea/
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Build output
+dist/
+build/
+
+# Optional npm cache folder
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional coverage directory for test coverage reports
+coverage/
+
+# Optional yarn integrity file
+.yarn-integrity
+
+# Optional local environment overrides
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
